--- a/translation/data/de.json
+++ b/translation/data/de.json
@@ -5,6 +5,12 @@
   "component.button.share.label": {
     "message": "Teilen"
   },
+  "component.translatable-contentful-entry-field.translate-button.label": {
+    "message": "Übersetzen"
+  },
+  "component.translatable-contentful-entry-field.translate-button.show-original": {
+    "message": "Original"
+  },
   "dialog.share.headline": {
     "message": "Dieses Projekt <b>teilen</b> "
   },
@@ -211,6 +217,9 @@
   },
   "page.blog.next-seo.title": {
     "message": "Blog"
+  },
+  "page.blog.section.blog-page-content.author": {
+    "message": "Geschrieben von <no-localization>{name}</no-localization>"
   },
   "page.blog.section.blog-page.btn.read-more": {
     "message": "Mehr lesen"
