--- a/translation/data/en.json
+++ b/translation/data/en.json
@@ -5,6 +5,12 @@
   "component.button.share.label": {
     "message": "Share"
   },
+  "component.translatable-contentful-entry-field.translate-button.label": {
+    "message": "Translate"
+  },
+  "component.translatable-contentful-entry-field.translate-button.show-original": {
+    "message": "Original"
+  },
   "dialog.share.headline": {
     "message": "<b>Share</b> this project"
   },
@@ -211,6 +217,9 @@
   },
   "page.blog.next-seo.title": {
     "message": "Blog"
+  },
+  "page.blog.section.blog-page-content.author": {
+    "message": "Written by <no-localization>{name}</no-localization>"
   },
   "page.blog.section.blog-page.btn.read-more": {
     "message": "Read more"
